--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>My PWA App</title>
   <link rel="manifest" href="manifest.json" />
   <meta name="theme-color" content="#317EFB"/>
-  <link rel="icon" href="icons/icon-192x192.png" />
+  <link rel="icon" href="settings_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.png" />
   <style>
     body { font-family: sans-serif; text-align: center; padding: 2rem; }
     #install-btn { display: none; padding: 1rem; background: #317EFB; color: #fff; border: none; cursor: pointer; border-radius: 5px; }
